Some README update.

--- a/README.Rmd
+++ b/README.Rmd
@@ -57,6 +57,7 @@ devtools::install_github("Non-Contradiction/JuliaCall")
 ```
 
 ## Basic Usage
+
 ```{r}
 library(JuliaCall)
 
@@ -120,43 +121,44 @@ at <lch34677@gmail.com> or <cxl508@psu.edu>.
 
 ## JuliaCall for R Package Developers
 
-If you are interested in developing an R package which is an interface for
-a Julia package, `JuliaCall` is an ideal choice for that!
-
-Basically you only need to find the Julia function or Julia module you want to have in `R`
-and then just `using` the module and `call` the function.
-Several examples are:
+If you are interested in developing an `R` package which is an interface for
+a `Julia` package, `JuliaCall` is an ideal choice.
+You only need to find the `Julia` function or `Julia` module you want to have in `R`, `using` the module, and `julia_call` the function.
+There are some examples:
 
 - [`diffeqr`](https://github.com/JuliaDiffEq/diffeqr) is a package for solving differential equations in `R`. It utilizes [DifferentialEquations.jl](http://docs.juliadiffeq.org/latest/) for its core routines to give high performance solving of ordinary differential equations (ODEs), stochastic differential equations (SDEs), delay differential equations (DDEs), and differential-algebraic equations (DAEs) directly in `R`.
 - [`convexjlr`](https://github.com/Non-Contradiction/convexjlr) is an `R` package for Disciplined Convex Programming (DCP) by providing a high level wrapper for `Julia` package [`Convex.jl`](https://github.com/JuliaOpt/Convex.jl). `convexjlr` can solve linear programs, second order cone programs, semidefinite programs, exponential cone programs, mixed-integer linear programs, and some other DCP-compliant convex programs through `Convex.jl`.
 - [`ipoptjlr`](https://github.com/Non-Contradiction/ipoptjlr) provides an `R` interface to the `Ipopt` nonlinear optimization solver. It provides a simple high-level wrapper for `Julia` package [`Ipopt.jl`] (https://github.com/JuliaOpt/Ipopt.jl).
+- [`FixedEffectjlr`](https://github.com/eloualiche/FixedEffectjlr) uses the `Julia` package [`FixedEffectModels.jl`](https://github.com/matthieugomez/FixedEffectModels.jl) to estimate large fixed effects models in `R`.
 - [Julia MixedModels from R](http://rpubs.com/dmbates/377897) illustrates how to use `JuliaCall` and `Julia` package [`MixedModels.jl`](https://github.com/dmbates/MixedModels.jl) to build mixed models in `R`.
 - [`autodiffr`](https://github.com/Non-Contradiction/autodiffr) provides automatic differentiation to native `R` functions by wrapping `Julia` packages [`ForwardDiff.jl`](https://github.com/JuliaDiff/ForwardDiff.jl) and [`ReverseDiff.jl`](https://github.com/JuliaDiff/ReverseDiff.jl) through `JuliaCall`, which is a work in progress.
 
 If you have any issues in developing an `R` package using `JuliaCall`,
-you may report it using the link: <https://github.com/Non-Contradiction/JuliaCall/issues/new>.
-Or email me at <lch34677@gmail.com> or <cxl508@psu.edu>.
+you may report it using the link: <https://github.com/Non-Contradiction/JuliaCall/issues/new>,
+or email me at <lch34677@gmail.com> or <cxl508@psu.edu>.
 
 ## Suggestion and Issue Reporting
 
 `JuliaCall` is under active development now.
 Any suggestion or issue reporting is welcome!
-You may report it using the link: <https://github.com/Non-Contradiction/JuliaCall/issues/new>.
-Or email me at <lch34677@gmail.com> or <cxl508@psu.edu>.
+You may report it using the link: <https://github.com/Non-Contradiction/JuliaCall/issues/new>,
+or email me at <lch34677@gmail.com> or <cxl508@psu.edu>.
 
-And if you encounter some issues which crash `R` or `RStudio`,
+If you encounter some issues which crash `R` or `RStudio`,
 then you may have met segfault errors.
-I am very sorry.
-And I am trying my best to remove errors like that.
+I am very sorry for this and will try my best to remove errors like that.
 It will be much appreciated if you can
-
 - download the source of `JuliaCall` from Github,
 - open `JuliaCall.Rproj` in your RStudio or open `R` from the directory where you download the source of `JuliaCall`,
 - run `devtools::check()` to see the result of `R CMD check` for `JuliaCall` on your machine,
 - and paste the result to the issue report.
 
-## Interfaces between R and Julia
+## Other interfaces between R and Julia
 
-- [`RCall.jl`](https://github.com/JuliaInterop/RCall.jl) is a `Julia` package which embeds `R` in `Julia`. `JuliaCall` is inspired by `RCall.jl` and depends on `RCall.jl` for many functionalities like much of the type conversion between `R` and `Julia`.
-- [`XRJulia`](https://github.com/johnmchambers/XRJulia) is an `R` package based on John Chambers' `XR` package and allow for structured integration of `R` with `Julia`. It connects to `Julia` and uses JSON to transfer data between `Julia` and `R`.
+- [`RCall.jl`](https://github.com/JuliaInterop/RCall.jl) is a `Julia` package which embeds `R` in `Julia`. `JuliaCall` is inspired by `RCall.jl` and depends on `RCall.jl` for many functionalities like type conversion between `R` and `Julia`.
+- [`XRJulia`](https://github.com/johnmchambers/XRJulia) is an `R` package based on John Chambers' `XR` package and allows for structured integration of `R` with `Julia`. It connects to `Julia` and uses JSON to transfer data between `Julia` and `R`.
 - [`RJulia`](https://github.com/armgong/rjulia) is an `R` package which embeds `Julia` in `R` as well as `JuliaCall`. It is not on CRAN yet and I haven't tested it.
+
+## License
+
+`JuliaCall` is licensed under [MIT](https://cran.r-project.org/web/licenses/MIT).
