Prepare for JOSS submission. [skip ci]

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -5,4 +5,93 @@
     address = {Vienna, Austria},
     year = {2018},
     url = {https://www.R-project.org/},
-  }
+}
+
+@article{bezanson2017julia,
+    title={{Julia: A Fresh Approach to Numerical Computing}},
+    author={Bezanson, Jeff and Edelman, Alan and Karpinski, Stefan and Shah, Viral B},
+    journal={SIAM review},
+    volume={59},
+    number={1},
+    pages={65--98},
+    year={2017},
+    publisher={SIAM},
+    url = {https://julialang.org/research/julia-fresh-approach-BEKS.pdf},
+    doi = {10.1137/141000671},
+}
+
+@book{chambers2017extending,
+    title={Extending {R}},
+    author={Chambers, John M},
+    year={2017},
+    publisher={CRC Press},
+    doi={10.1201/9781315381305}
+}
+
+@book{xie2018r,
+    title={R markdown: The definitive guide},
+    author={Xie, Yihui and Allaire, Joseph J and Grolemund, Garrett},
+    year={2018},
+    publisher={CRC Press},
+    doi={10.1201/9781138359444}
+}
+
+@Manual{autodiffr,
+    title = {{autodiffr: Automatic Differentiation in R through 'Julia'}},
+    author = {Changcheng Li},
+    year = {2018},
+    note = {R package version 0.1.0.9000},
+    url = {https://github.com/Non-Contradiction/autodiffr},
+}
+
+@Manual{convexjlr,
+    title = {{convexjlr: Disciplined Convex Programming in R using 'Convex.jl'}},
+    author = {Changcheng Li},
+    year = {2018},
+    note = {R package version 0.8.1.9000},
+    url = {https://github.com/Non-Contradiction/convexjlr},
+}
+
+@Manual{diffeqr,
+    title = {{diffeqr: Solving Differential Equations (ODEs, SDEs, DDEs, DAEs)}},
+    author = {Christopher Rackauckas},
+    year = {2018},
+    note = {R package version 0.1.1},
+    url = {https://github.com/JuliaDiffEq/diffeqr},
+}
+
+@Manual{fixedeffectjlr,
+    title = {{FixedEffectjlr: A package for fast Fixed Effect Models in R}},
+    author = {Erik Loualiche},
+    year = {2018},
+    note = {R package version 0.1.0},
+    url = {https://github.com/eloualiche/FixedEffectjlr},
+}
+
+@Article{Rcpp,
+  title = {{Rcpp}: Seamless {R} and {C++} Integration},
+  author = {Dirk Eddelbuettel and Romain Fran\c{c}ois},
+  journal = {Journal of Statistical Software},
+  year = {2011},
+  volume = {40},
+  number = {8},
+  pages = {1--18},
+  url = {http://www.jstatsoft.org/v40/i08/},
+  doi = {10.18637/jss.v040.i08},
+}
+
+@Manual{V8,
+    title = {{V8: Embedded JavaScript Engine for R}},
+    author = {Jeroen Ooms},
+    year = {2019},
+    note = {R package version 2.0},
+    url = {https://CRAN.R-project.org/package=V8},
+}
+
+@Manual{rjulia,
+    title = {{rjulia: Integrating R and Julia -- Calling Julia from R}},
+    author = {Yu Gong and Peter M. Haverty and Oliver Keys and Martin Maechler},
+    year = {2017},
+    note = {R package version 0.10.4},
+    url = {https://github.com/armgong/rjulia}
+}
