--- a/README.Rmd
+++ b/README.Rmd
@@ -18,7 +18,7 @@ output: github_document
 - [JuliaCall for Seamless Integration of R and Julia](#juliacall-for-seamless-integration-of-r-and-julia)
   - [Installation](#installation)
   - [Basic Usage](#basic-usage)
-  - [Troubleshooting and Way to Get Help](#troubleshooting-and-way-to-get-help)
+  - [Troubleshooting and Ways to Get Help](#troubleshooting-and-ways-to-get-help)
   - [JuliaCall for R Package Developers](#juliacall-for-r-package-developers)
   - [Suggestion, Issue Reporting, and Contributing](#suggestion-issue-reporting-and-contributing)
   - [Other Interfaces Between R and Julia](#other-interfaces-between-r-and-julia)
@@ -94,7 +94,7 @@ julia_installed_package("Optim")
 julia_library("Optim")
 ```
 
-## Troubleshooting and Way to Get Help
+## Troubleshooting and Ways to Get Help
 
 ### Julia is not found
 
@@ -148,7 +148,7 @@ Any suggestion or issue reporting is welcome!
 You may report it using the link: <https://github.com/Non-Contradiction/JuliaCall/issues/new>, or email me at <lch34677@gmail.com> or <cxl508@psu.edu>.
 You are welcome to use the [issue template](.github/issue_template.md)
 and the [pull request template](.github/pull_request_template.md).
-The [contributing guide](.github/CONTRIBUTING.md) gives some guidance to make contributions.
+The [contributing guide](.github/CONTRIBUTING.md) provides some guidance for making contributions.
 
 ### Checking `JuliaCall` Package
 
