--- a/README.Rmd
+++ b/README.Rmd
@@ -174,3 +174,20 @@ To check and test the `JuliaCall` package, you need to have the source package. 
 ## Code of Conduct
 
 Please note that the `JuliaCall` project is released with a [Contributor Code of Conduct](CODE_OF_CONDUCT.md). By contributing to this project, you agree to abide by its terms.
+
+## Citing
+
+If you use `JuliaCall` in research that resulted in publications, then please cite the `JuliaCall` paper using the following BibTeX entry:
+```
+@Article{,
+    author = {Changcheng Li},
+    title = {{JuliaCall}: an {R} package for seamless integration between {R} and {Julia}},
+    journal = {The Journal of Open Source Software},
+    publisher = {The Open Journal},
+    year = {2019},
+    volume = {4},
+    number = {35},
+    pages = {1284},
+    doi = {10.21105/joss.01284},
+  }
+```
