Use GitHub action badge.

--- a/README.Rmd
+++ b/README.Rmd
@@ -6,8 +6,7 @@ output: github_document
 
 # JuliaCall for Seamless Integration of R and Julia
 
-[![Travis-CI Build Status](https://travis-ci.org/Non-Contradiction/JuliaCall.svg?branch=master)](https://travis-ci.org/Non-Contradiction/JuliaCall)
-[![AppVeyor Build Status](https://ci.appveyor.com/api/projects/status/github/Non-Contradiction/JuliaCall?branch=master&svg=true)](https://ci.appveyor.com/project/Non-Contradiction/JuliaCall)
+[![R build status](https://github.com/Non-Contradiction/JuliaCall/workflows/R-CMD-check/badge.svg)](https://github.com/Non-Contradiction/JuliaCall/actions)
 [![CRAN_Status_Badge](https://www.r-pkg.org/badges/version/JuliaCall)](https://cran.r-project.org/package=JuliaCall)
 [![](https://cranlogs.r-pkg.org/badges/JuliaCall)](https://cran.r-project.org/package=JuliaCall)
 [![](https://cranlogs.r-pkg.org/badges/grand-total/JuliaCall)](https://cran.r-project.org/package=JuliaCall)
@@ -53,7 +52,7 @@ install.packages("JuliaCall")
 To use `JuliaCall` you must have a working installation of Julia.
 This can be easily done via:
 
-```{julia eval=FALSE}
+```{r eval=FALSE}
 library(JuliaCall)
 install_julia()
 ```
@@ -62,7 +61,7 @@ which will automatically install and setup a version of Julia specifically
 for use with JuliaCall.
 
 You can also setup Julia manually by downloading a generic binary from 
-<https://julialang.org/downloads/> and add it to your path Currently 
+<https://julialang.org/downloads/> and add it to your path. Currently 
 `Julia v0.6.x` and the `Julia v1.x` releeses are all supported by 
 `JuliaCall`.
 
